src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    FOR
    RETURN

Grammar

Rule 0     S' -> start
Rule 1     start -> stmt_sequence
Rule 2     stmt_sequence -> stmt_sequence stmt
Rule 3     stmt_sequence -> stmt
Rule 4     stmt -> var_decl
Rule 5     stmt -> var_assign
Rule 6     stmt -> output_stmt
Rule 7     stmt -> conditional
Rule 8     stmt -> loop
Rule 9     stmt -> code_block
Rule 10    var_decl -> data_type IDENTIFIER SEMICOLON
Rule 11    var_decl -> data_type IDENTIFIER EQUALS expr SEMICOLON
Rule 12    data_type -> INT
Rule 13    data_type -> FLOAT
Rule 14    var_assign -> IDENTIFIER EQUALS expr SEMICOLON
Rule 15    output_stmt -> PRINT LPAREN expr RPAREN SEMICOLON
Rule 16    conditional -> IF LPAREN comparison RPAREN if_jump code_block if_end
Rule 17    conditional -> IF LPAREN comparison RPAREN if_jump code_block else_jump ELSE code_block if_end
Rule 18    if_jump -> <empty>
Rule 19    else_jump -> <empty>
Rule 20    if_end -> <empty>
Rule 21    loop -> WHILE while_start LPAREN comparison RPAREN while_body code_block while_end
Rule 22    while_start -> <empty>
Rule 23    while_body -> <empty>
Rule 24    while_end -> <empty>
Rule 25    code_block -> block_start stmt_sequence block_end
Rule 26    block_start -> LBRACE
Rule 27    block_end -> RBRACE
Rule 28    comparison -> expr rel_op expr
Rule 29    rel_op -> LESS
Rule 30    rel_op -> LESS_EQ
Rule 31    rel_op -> GREATER
Rule 32    rel_op -> GREATER_EQ
Rule 33    rel_op -> EQUAL_TO
Rule 34    rel_op -> NOT_EQUAL
Rule 35    expr -> expr PLUS term
Rule 36    expr -> expr MINUS term
Rule 37    expr -> term
Rule 38    term -> term MULTIPLY base
Rule 39    term -> term DIVIDE base
Rule 40    term -> term MOD base
Rule 41    term -> base
Rule 42    base -> INTEGER
Rule 43    base -> DECIMAL
Rule 44    base -> IDENTIFIER
Rule 45    base -> LPAREN expr RPAREN

Terminals, with rules where they appear

COMMA                : 
DECIMAL              : 43
DIVIDE               : 39
ELSE                 : 17
EQUALS               : 11 14
EQUAL_TO             : 33
FLOAT                : 13
FOR                  : 
GREATER              : 31
GREATER_EQ           : 32
IDENTIFIER           : 10 11 14 44
IF                   : 16 17
INT                  : 12
INTEGER              : 42
LBRACE               : 26
LESS                 : 29
LESS_EQ              : 30
LPAREN               : 15 16 17 21 45
MINUS                : 36
MOD                  : 40
MULTIPLY             : 38
NOT_EQUAL            : 34
PLUS                 : 35
PRINT                : 15
RBRACE               : 27
RETURN               : 
RPAREN               : 15 16 17 21 45
SEMICOLON            : 10 11 14 15
WHILE                : 21
error                : 

Nonterminals, with rules where they appear

base                 : 38 39 40 41
block_end            : 25
block_start          : 25
code_block           : 9 16 17 17 21
comparison           : 16 17 21
conditional          : 7
data_type            : 10 11
else_jump            : 17
expr                 : 11 14 15 28 28 35 36 45
if_end               : 16 17
if_jump              : 16 17
loop                 : 8
output_stmt          : 6
rel_op               : 28
start                : 0
stmt                 : 2 3
stmt_sequence        : 1 2 25
term                 : 35 36 37 38 39 40
var_assign           : 5
var_decl             : 4
while_body           : 21
while_end            : 21
while_start          : 21

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . stmt_sequence
    (2) stmt_sequence -> . stmt_sequence stmt
    (3) stmt_sequence -> . stmt
    (4) stmt -> . var_decl
    (5) stmt -> . var_assign
    (6) stmt -> . output_stmt
    (7) stmt -> . conditional
    (8) stmt -> . loop
    (9) stmt -> . code_block
    (10) var_decl -> . data_type IDENTIFIER SEMICOLON
    (11) var_decl -> . data_type IDENTIFIER EQUALS expr SEMICOLON
    (14) var_assign -> . IDENTIFIER EQUALS expr SEMICOLON
    (15) output_stmt -> . PRINT LPAREN expr RPAREN SEMICOLON
    (16) conditional -> . IF LPAREN comparison RPAREN if_jump code_block if_end
    (17) conditional -> . IF LPAREN comparison RPAREN if_jump code_block else_jump ELSE code_block if_end
    (21) loop -> . WHILE while_start LPAREN comparison RPAREN while_body code_block while_end
    (25) code_block -> . block_start stmt_sequence block_end
    (12) data_type -> . INT
    (13) data_type -> . FLOAT
    (26) block_start -> . LBRACE

    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    LBRACE          shift and go to state 18

    start                          shift and go to state 1
    stmt_sequence                  shift and go to state 2
    stmt                           shift and go to state 3
    var_decl                       shift and go to state 4
    var_assign                     shift and go to state 5
    output_stmt                    shift and go to state 6
    conditional                    shift and go to state 7
    loop                           shift and go to state 8
    code_block                     shift and go to state 9
    data_type                      shift and go to state 10
    block_start                    shift and go to state 15

state 1

    (0) S' -> start .



state 2

    (1) start -> stmt_sequence .
    (2) stmt_sequence -> stmt_sequence . stmt
    (4) stmt -> . var_decl
    (5) stmt -> . var_assign
    (6) stmt -> . output_stmt
    (7) stmt -> . conditional
    (8) stmt -> . loop
    (9) stmt -> . code_block
    (10) var_decl -> . data_type IDENTIFIER SEMICOLON
    (11) var_decl -> . data_type IDENTIFIER EQUALS expr SEMICOLON
    (14) var_assign -> . IDENTIFIER EQUALS expr SEMICOLON
    (15) output_stmt -> . PRINT LPAREN expr RPAREN SEMICOLON
    (16) conditional -> . IF LPAREN comparison RPAREN if_jump code_block if_end
    (17) conditional -> . IF LPAREN comparison RPAREN if_jump code_block else_jump ELSE code_block if_end
    (21) loop -> . WHILE while_start LPAREN comparison RPAREN while_body code_block while_end
    (25) code_block -> . block_start stmt_sequence block_end
    (12) data_type -> . INT
    (13) data_type -> . FLOAT
    (26) block_start -> . LBRACE

    $end            reduce using rule 1 (start -> stmt_sequence .)
    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    LBRACE          shift and go to state 18

    stmt                           shift and go to state 19
    var_decl                       shift and go to state 4
    var_assign                     shift and go to state 5
    output_stmt                    shift and go to state 6
    conditional                    shift and go to state 7
    loop                           shift and go to state 8
    code_block                     shift and go to state 9
    data_type                      shift and go to state 10
    block_start                    shift and go to state 15

state 3

    (3) stmt_sequence -> stmt .

    IDENTIFIER      reduce using rule 3 (stmt_sequence -> stmt .)
    PRINT           reduce using rule 3 (stmt_sequence -> stmt .)
    IF              reduce using rule 3 (stmt_sequence -> stmt .)
    WHILE           reduce using rule 3 (stmt_sequence -> stmt .)
    INT             reduce using rule 3 (stmt_sequence -> stmt .)
    FLOAT           reduce using rule 3 (stmt_sequence -> stmt .)
    LBRACE          reduce using rule 3 (stmt_sequence -> stmt .)
    $end            reduce using rule 3 (stmt_sequence -> stmt .)
    RBRACE          reduce using rule 3 (stmt_sequence -> stmt .)


state 4

    (4) stmt -> var_decl .

    IDENTIFIER      reduce using rule 4 (stmt -> var_decl .)
    PRINT           reduce using rule 4 (stmt -> var_decl .)
    IF              reduce using rule 4 (stmt -> var_decl .)
    WHILE           reduce using rule 4 (stmt -> var_decl .)
    INT             reduce using rule 4 (stmt -> var_decl .)
    FLOAT           reduce using rule 4 (stmt -> var_decl .)
    LBRACE          reduce using rule 4 (stmt -> var_decl .)
    $end            reduce using rule 4 (stmt -> var_decl .)
    RBRACE          reduce using rule 4 (stmt -> var_decl .)


state 5

    (5) stmt -> var_assign .

    IDENTIFIER      reduce using rule 5 (stmt -> var_assign .)
    PRINT           reduce using rule 5 (stmt -> var_assign .)
    IF              reduce using rule 5 (stmt -> var_assign .)
    WHILE           reduce using rule 5 (stmt -> var_assign .)
    INT             reduce using rule 5 (stmt -> var_assign .)
    FLOAT           reduce using rule 5 (stmt -> var_assign .)
    LBRACE          reduce using rule 5 (stmt -> var_assign .)
    $end            reduce using rule 5 (stmt -> var_assign .)
    RBRACE          reduce using rule 5 (stmt -> var_assign .)


state 6

    (6) stmt -> output_stmt .

    IDENTIFIER      reduce using rule 6 (stmt -> output_stmt .)
    PRINT           reduce using rule 6 (stmt -> output_stmt .)
    IF              reduce using rule 6 (stmt -> output_stmt .)
    WHILE           reduce using rule 6 (stmt -> output_stmt .)
    INT             reduce using rule 6 (stmt -> output_stmt .)
    FLOAT           reduce using rule 6 (stmt -> output_stmt .)
    LBRACE          reduce using rule 6 (stmt -> output_stmt .)
    $end            reduce using rule 6 (stmt -> output_stmt .)
    RBRACE          reduce using rule 6 (stmt -> output_stmt .)


state 7

    (7) stmt -> conditional .

    IDENTIFIER      reduce using rule 7 (stmt -> conditional .)
    PRINT           reduce using rule 7 (stmt -> conditional .)
    IF              reduce using rule 7 (stmt -> conditional .)
    WHILE           reduce using rule 7 (stmt -> conditional .)
    INT             reduce using rule 7 (stmt -> conditional .)
    FLOAT           reduce using rule 7 (stmt -> conditional .)
    LBRACE          reduce using rule 7 (stmt -> conditional .)
    $end            reduce using rule 7 (stmt -> conditional .)
    RBRACE          reduce using rule 7 (stmt -> conditional .)


state 8

    (8) stmt -> loop .

    IDENTIFIER      reduce using rule 8 (stmt -> loop .)
    PRINT           reduce using rule 8 (stmt -> loop .)
    IF              reduce using rule 8 (stmt -> loop .)
    WHILE           reduce using rule 8 (stmt -> loop .)
    INT             reduce using rule 8 (stmt -> loop .)
    FLOAT           reduce using rule 8 (stmt -> loop .)
    LBRACE          reduce using rule 8 (stmt -> loop .)
    $end            reduce using rule 8 (stmt -> loop .)
    RBRACE          reduce using rule 8 (stmt -> loop .)


state 9

    (9) stmt -> code_block .

    IDENTIFIER      reduce using rule 9 (stmt -> code_block .)
    PRINT           reduce using rule 9 (stmt -> code_block .)
    IF              reduce using rule 9 (stmt -> code_block .)
    WHILE           reduce using rule 9 (stmt -> code_block .)
    INT             reduce using rule 9 (stmt -> code_block .)
    FLOAT           reduce using rule 9 (stmt -> code_block .)
    LBRACE          reduce using rule 9 (stmt -> code_block .)
    $end            reduce using rule 9 (stmt -> code_block .)
    RBRACE          reduce using rule 9 (stmt -> code_block .)


state 10

    (10) var_decl -> data_type . IDENTIFIER SEMICOLON
    (11) var_decl -> data_type . IDENTIFIER EQUALS expr SEMICOLON

    IDENTIFIER      shift and go to state 20


state 11

    (14) var_assign -> IDENTIFIER . EQUALS expr SEMICOLON

    EQUALS          shift and go to state 21


state 12

    (15) output_stmt -> PRINT . LPAREN expr RPAREN SEMICOLON

    LPAREN          shift and go to state 22


state 13

    (16) conditional -> IF . LPAREN comparison RPAREN if_jump code_block if_end
    (17) conditional -> IF . LPAREN comparison RPAREN if_jump code_block else_jump ELSE code_block if_end

    LPAREN          shift and go to state 23


state 14

    (21) loop -> WHILE . while_start LPAREN comparison RPAREN while_body code_block while_end
    (22) while_start -> .

    LPAREN          reduce using rule 22 (while_start -> .)

    while_start                    shift and go to state 24

state 15

    (25) code_block -> block_start . stmt_sequence block_end
    (2) stmt_sequence -> . stmt_sequence stmt
    (3) stmt_sequence -> . stmt
    (4) stmt -> . var_decl
    (5) stmt -> . var_assign
    (6) stmt -> . output_stmt
    (7) stmt -> . conditional
    (8) stmt -> . loop
    (9) stmt -> . code_block
    (10) var_decl -> . data_type IDENTIFIER SEMICOLON
    (11) var_decl -> . data_type IDENTIFIER EQUALS expr SEMICOLON
    (14) var_assign -> . IDENTIFIER EQUALS expr SEMICOLON
    (15) output_stmt -> . PRINT LPAREN expr RPAREN SEMICOLON
    (16) conditional -> . IF LPAREN comparison RPAREN if_jump code_block if_end
    (17) conditional -> . IF LPAREN comparison RPAREN if_jump code_block else_jump ELSE code_block if_end
    (21) loop -> . WHILE while_start LPAREN comparison RPAREN while_body code_block while_end
    (25) code_block -> . block_start stmt_sequence block_end
    (12) data_type -> . INT
    (13) data_type -> . FLOAT
    (26) block_start -> . LBRACE

    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    LBRACE          shift and go to state 18

    block_start                    shift and go to state 15
    stmt_sequence                  shift and go to state 25
    stmt                           shift and go to state 3
    var_decl                       shift and go to state 4
    var_assign                     shift and go to state 5
    output_stmt                    shift and go to state 6
    conditional                    shift and go to state 7
    loop                           shift and go to state 8
    code_block                     shift and go to state 9
    data_type                      shift and go to state 10

state 16

    (12) data_type -> INT .

    IDENTIFIER      reduce using rule 12 (data_type -> INT .)


state 17

    (13) data_type -> FLOAT .

    IDENTIFIER      reduce using rule 13 (data_type -> FLOAT .)


state 18

    (26) block_start -> LBRACE .

    IDENTIFIER      reduce using rule 26 (block_start -> LBRACE .)
    PRINT           reduce using rule 26 (block_start -> LBRACE .)
    IF              reduce using rule 26 (block_start -> LBRACE .)
    WHILE           reduce using rule 26 (block_start -> LBRACE .)
    INT             reduce using rule 26 (block_start -> LBRACE .)
    FLOAT           reduce using rule 26 (block_start -> LBRACE .)
    LBRACE          reduce using rule 26 (block_start -> LBRACE .)


state 19

    (2) stmt_sequence -> stmt_sequence stmt .

    IDENTIFIER      reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)
    PRINT           reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)
    IF              reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)
    WHILE           reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)
    INT             reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)
    FLOAT           reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)
    LBRACE          reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)
    $end            reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)
    RBRACE          reduce using rule 2 (stmt_sequence -> stmt_sequence stmt .)


state 20

    (10) var_decl -> data_type IDENTIFIER . SEMICOLON
    (11) var_decl -> data_type IDENTIFIER . EQUALS expr SEMICOLON

    SEMICOLON       shift and go to state 26
    EQUALS          shift and go to state 27


state 21

    (14) var_assign -> IDENTIFIER EQUALS . expr SEMICOLON
    (35) expr -> . expr PLUS term
    (36) expr -> . expr MINUS term
    (37) expr -> . term
    (38) term -> . term MULTIPLY base
    (39) term -> . term DIVIDE base
    (40) term -> . term MOD base
    (41) term -> . base
    (42) base -> . INTEGER
    (43) base -> . DECIMAL
    (44) base -> . IDENTIFIER
    (45) base -> . LPAREN expr RPAREN

    INTEGER         shift and go to state 32
    DECIMAL         shift and go to state 33
    IDENTIFIER      shift and go to state 28
    LPAREN          shift and go to state 34

    expr                           shift and go to state 29
    term                           shift and go to state 30
    base                           shift and go to state 31

state 22

    (15) output_stmt -> PRINT LPAREN . expr RPAREN SEMICOLON
    (35) expr -> . expr PLUS term
    (36) expr -> . expr MINUS term
    (37) expr -> . term
    (38) term -> . term MULTIPLY base
    (39) term -> . term DIVIDE base
    (40) term -> . term MOD base
    (41) term -> . base
    (42) base -> . INTEGER
    (43) base -> . DECIMAL
    (44) base -> . IDENTIFIER
    (45) base -> . LPAREN expr RPAREN

    INTEGER         shift and go to state 32
    DECIMAL         shift and go to state 33
    IDENTIFIER      shift and go to state 28
    LPAREN          shift and go to state 34

    expr                           shift and go to state 35
    term                           shift and go to state 30
    base                           shift and go to state 31

state 23

    (16) conditional -> IF LPAREN . comparison RPAREN if_jump code_block if_end
    (17) conditional -> IF LPAREN . comparison RPAREN if_jump code_block else_jump ELSE code_block if_end
    (28) comparison -> . expr rel_op expr
    (35) expr -> . expr PLUS term
    (36) expr -> . expr MINUS term
    (37) expr -> . term
    (38) term -> . term MULTIPLY base
    (39) term -> . term DIVIDE base
    (40) term -> . term MOD base
    (41) term -> . base
    (42) base -> . INTEGER
    (43) base -> . DECIMAL
    (44) base -> . IDENTIFIER
    (45) base -> . LPAREN expr RPAREN

    INTEGER         shift and go to state 32
    DECIMAL         shift and go to state 33
    IDENTIFIER      shift and go to state 28
    LPAREN          shift and go to state 34

    comparison                     shift and go to state 36
    expr                           shift and go to state 37
    term                           shift and go to state 30
    base                           shift and go to state 31

state 24

    (21) loop -> WHILE while_start . LPAREN comparison RPAREN while_body code_block while_end

    LPAREN          shift and go to state 38


state 25

    (25) code_block -> block_start stmt_sequence . block_end
    (2) stmt_sequence -> stmt_sequence . stmt
    (27) block_end -> . RBRACE
    (4) stmt -> . var_decl
    (5) stmt -> . var_assign
    (6) stmt -> . output_stmt
    (7) stmt -> . conditional
    (8) stmt -> . loop
    (9) stmt -> . code_block
    (10) var_decl -> . data_type IDENTIFIER SEMICOLON
    (11) var_decl -> . data_type IDENTIFIER EQUALS expr SEMICOLON
    (14) var_assign -> . IDENTIFIER EQUALS expr SEMICOLON
    (15) output_stmt -> . PRINT LPAREN expr RPAREN SEMICOLON
    (16) conditional -> . IF LPAREN comparison RPAREN if_jump code_block if_end
    (17) conditional -> . IF LPAREN comparison RPAREN if_jump code_block else_jump ELSE code_block if_end
    (21) loop -> . WHILE while_start LPAREN comparison RPAREN while_body code_block while_end
    (25) code_block -> . block_start stmt_sequence block_end
    (12) data_type -> . INT
    (13) data_type -> . FLOAT
    (26) block_start -> . LBRACE

    RBRACE          shift and go to state 40
    IDENTIFIER      shift and go to state 11
    PRINT           shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    LBRACE          shift and go to state 18

    block_start                    shift and go to state 15
    block_end                      shift and go to state 39
    stmt                           shift and go to state 19
    var_decl                       shift and go to state 4
    var_assign                     shift and go to state 5
    output_stmt                    shift and go to state 6
    conditional                    shift and go to state 7
    loop                           shift and go to state 8
    code_block                     shift and go to state 9
    data_type                      shift and go to state 10

state 26

    (10) var_decl -> data_type IDENTIFIER SEMICOLON .

    IDENTIFIER      reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)
    PRINT           reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)
    IF              reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)
    WHILE           reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)
    INT             reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)
    LBRACE          reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)
    $end            reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 10 (var_decl -> data_type IDENTIFIER SEMICOLON .)


state 27

    (11) var_decl -> data_type IDENTIFIER EQUALS . expr SEMICOLON
    (35) expr -> . expr PLUS term
    (36) expr -> . expr MINUS term
    (37) expr -> . term
    (38) term -> . term MULTIPLY base
    (39) term -> . term DIVIDE base
    (40) term -> . term MOD base
    (41) term -> . base
    (42) base -> . INTEGER
    (43) base -> . DECIMAL
    (44) base -> . IDENTIFIER
    (45) base -> . LPAREN expr RPAREN

    INTEGER         shift and go to state 32
    DECIMAL         shift and go to state 33
    IDENTIFIER      shift and go to state 28
    LPAREN          shift and go to state 34

    expr                           shift and go to state 41
    term                           shift and go to state 30
    base                           shift and go to state 31

state 28

    (44) base -> IDENTIFIER .

    MULTIPLY        reduce using rule 44 (base -> IDENTIFIER .)
    DIVIDE          reduce using rule 44 (base -> IDENTIFIER .)
    MOD             reduce using rule 44 (base -> IDENTIFIER .)
    SEMICOLON       reduce using rule 44 (base -> IDENTIFIER .)
    PLUS            reduce using rule 44 (base -> IDENTIFIER .)
    MINUS           reduce using rule 44 (base -> IDENTIFIER .)
    RPAREN          reduce using rule 44 (base -> IDENTIFIER .)
    LESS            reduce using rule 44 (base -> IDENTIFIER .)
    LESS_EQ         reduce using rule 44 (base -> IDENTIFIER .)
    GREATER         reduce using rule 44 (base -> IDENTIFIER .)
    GREATER_EQ      reduce using rule 44 (base -> IDENTIFIER .)
    EQUAL_TO        reduce using rule 44 (base -> IDENTIFIER .)
    NOT_EQUAL       reduce using rule 44 (base -> IDENTIFIER .)


state 29

    (14) var_assign -> IDENTIFIER EQUALS expr . SEMICOLON
    (35) expr -> expr . PLUS term
    (36) expr -> expr . MINUS term

    SEMICOLON       shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44


state 30

    (37) expr -> term .
    (38) term -> term . MULTIPLY base
    (39) term -> term . DIVIDE base
    (40) term -> term . MOD base

    SEMICOLON       reduce using rule 37 (expr -> term .)
    PLUS            reduce using rule 37 (expr -> term .)
    MINUS           reduce using rule 37 (expr -> term .)
    RPAREN          reduce using rule 37 (expr -> term .)
    LESS            reduce using rule 37 (expr -> term .)
    LESS_EQ         reduce using rule 37 (expr -> term .)
    GREATER         reduce using rule 37 (expr -> term .)
    GREATER_EQ      reduce using rule 37 (expr -> term .)
    EQUAL_TO        reduce using rule 37 (expr -> term .)
    NOT_EQUAL       reduce using rule 37 (expr -> term .)
    MULTIPLY        shift and go to state 45
    DIVIDE          shift and go to state 46
    MOD             shift and go to state 47


state 31

    (41) term -> base .

    MULTIPLY        reduce using rule 41 (term -> base .)
    DIVIDE          reduce using rule 41 (term -> base .)
    MOD             reduce using rule 41 (term -> base .)
    SEMICOLON       reduce using rule 41 (term -> base .)
    PLUS            reduce using rule 41 (term -> base .)
    MINUS           reduce using rule 41 (term -> base .)
    RPAREN          reduce using rule 41 (term -> base .)
    LESS            reduce using rule 41 (term -> base .)
    LESS_EQ         reduce using rule 41 (term -> base .)
    GREATER         reduce using rule 41 (term -> base .)
    GREATER_EQ      reduce using rule 41 (term -> base .)
    EQUAL_TO        reduce using rule 41 (term -> base .)
    NOT_EQUAL       reduce using rule 41 (term -> base .)


state 32

    (42) base -> INTEGER .
